Refresh and delele all spools

--- a/ILEditor/UserTools/SpoolListing.resx
+++ b/ILEditor/UserTools/SpoolListing.resx
@@ -124,8 +124,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA+
-        CAAAAk1TRnQBSQFMAwEBAAEYAQABGAEAARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAm
+        CAAAAk1TRnQBSQFMAwEBAAEgAQABIAEAARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
         AUADAAEQAwABAQEAAQgGAAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
         AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
         AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
@@ -153,14 +153,56 @@
         AQAB/wGZAf8BAAH/AcwCAAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEA
         AcwB/wFmAQAC/wGZAQAC/wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEA
         ASEBAAGlAQADXwEAA3cBAAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7
-        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8BAAH/AbwB7wG1AbQBkQWL
-        ApEB9DIAAfEBtAG7AQkB8AHxAfMB9AL/ARkB9AG1AfAyAAG8AbUI/wG1ARkBtQG8MgAB8gGLCbQBGQEJ
-        AQcyAAH/AbsBtQH0AwkEGQH0AQkBtTMAAfQBtAH/CBkB8QG1MwAB/wG0Af8IGQHzAbQzAAH/AbMB/wgZ
-        Af8BswH/MwABtAH/CBkB/wG0Af8zAAG0AfMIGQH/AbQB/zMAAbsBGQH0BxkB/wK0AfQyAAIJAf8HGQH/
-        AbQBGQG0MgACCQH/BBkD9AH/AbQB/wG7MgAB8QEJAf8E9AX/ARkBtDIAAfIB3AX/AfQDGQEJAboB8zIA
-        AfQBCQHcAdsEugG7AwkB9AH/MAABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wIA
-        AQMHAAEDBwABAwcAAQMHAAEDBgABgAEDBgABgAEDBgABgAEBBgABwAEBBgABwAEBBgABwAcAAcAHAAHA
-        BwABwAcAAcAHAAHABwAL
+        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8CAAHxAbUKrQG1AfEyAAG0
+        AfQF8wP0AvUB/wG0MgABrQHzCtsB/wGtMgABrQHzAdsI3AHbAfUBrTIAAbMB9AjbAtoB9QGtMgABswH0
+        ChkB9QGtMgABtAH0ChkB9QGzMgABtAH0ChkB9AGzMgABtAH0ChkB9AG0MgABtAH0ChkB9AG0MgABtAH1
+        BxkB3QIJAfUBtDIAAbQB9QcZAfMB9AH1AfQBszIAAbQB9QYZAd0B/wIZAbsBCTIAAbQB9QYZAd0B/wEJ
+        AboBtAH/MgABuwj0ARkBugG0Af8zAAHyAbsItAEJAf8zAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEB
+        AQABAQUAAYAXAAP/AQABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEB
+        BgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEDBgABgAEHBgAL
+</value>
+  </data>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>127, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="refreshButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAM4SURBVDhPXZPZTxNRGEfnSePf4IMat4gKcQ0JiRIjCi4Q
+        FIhEhNKWWkHFqkAUiKCoRZAEUZG4BKMBd7HBCkIhLKWtgmKgLZssIqBAlaXMbZkZft5Oq0a/5OTOyzlz
+        Z+4ME5BWJ9mTY6wKyTX+CM4xsnQlIlddq4mE5BjIrmx9u19SQ75X+JN5zP8TdLGxYWyKjNumCW+zO2Cb
+        /sv4lAsC6/AU0jVfIC/omgk8pp3vUd2zW60fnZxx8ob+WZgGOJi+cDD2c9D3OVHX7UCFxQ4HB5R3sEgv
+        G4DsWhf7T4QGWBpAyyCPD4McXTm8FyNO1Pc48NYyQwMCWoZ5qA35yNL2Y9uZmhKPTgPZTcQV+EgDrV85
+        fPzKi7F3A7No/OxEdSeLvu928VHSapKRoUtHQHo959HdgQm7E230Du2UthEBn2hE221GlkGN+KoYKLRR
+        kJYdwDldMlIrTyL4Zrzg0Rlml7qJ/KQB68gcLFQ2U6o+W5HZlInbrQXQdD1FWedjPO8owVPrA5Sai6F6
+        eQQ78rb2iIEgGrDRQMe3OREr5eaHYtxozsWrzifIqE3BwdJQRNzfi1OaBJx4oUTAldi/O9iZ1UTGp52w
+        eGTXLk7rTkCmiUT0s3AkvT6DZvpiDX2zkBRLcfRhPLZl6ImvyneBGAg4rydj9Lwtnkf4jXlYQNuQgNbB
+        WaS8zMR7esSJJWcxwTqxJVVPRNk1rtq3SQfMQ3Oi4Ianp8JSmUNCqQrR92Jhot+GkUYURTJsSFoL78RV
+        8DqyvJ/xT20kwxME4eUORJQThL0m2E+v92sc2HvnFOIfSxH38BD8MjZh89l1iCwMRZ7pAuT3o7BMtqSI
+        8UupI4M2guP1Aoo7gHtW4LYFCL21D8pHEhS2XMX15ivIf3eZilnINWZCWSrBMuni5kUxC/0ZX1XtTO+o
+        fU5ZK+CwjkdcDQd5DS8SWHAc0XcjEFm0Dz4qL6xOWIGViqVYLt3Oi7Jr1iure79PkqneMVagoHeURY+H
+        sWn65q9LEHIpGPRfo3ACLwgTq2LemEXZNRuVlQk+8srqdYoqm4+ikvwhzo13nJZ4KcN4b3kFWSuv+LlG
+        +kbnHauVuW2G+QVzAaf+XTbw/gAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALmSURBVDhPVZFbSFNxHMdXXnqup3ophB7Ch6TooZBAZtO0
+        TNAMepHKeQExKFCzksQsvCSRRQRR1EMXKkS8NZsXvGw608zbZqbzPnVz6m7nf7az7dvvnM1Lf/jwO+fh
+        +znf/+/IxKO433ntYlWfOvlJ3/qlqj6OJpOoFqeOJVf1ssQKzVh0fvezyLQv4VJo90l41NNtsbM1q4N5
+        rU4eVscOa3YRBoPJjuL6eSifT7rO5zXvC0YD50K5xmxzub29sx7o5gTo5gX0zQrQzLjR+ZeHSu8ELwCN
+        ExyK6+aQUTPJ/SchAUcCDC548WtBoCngpyRxo2uKxw+9iwQ+DJq80C15UNY8D3lR+8dgnAQVWiYKhkjw
+        e1HA0KJXkvXPedAz7UbrHw4zq07pKg4mYHXDBUVxlxCMBwSbTjdG6QtjxOiyD8OSRGzhkVqoqUXTmAMN
+        IzZs0p7iSntYMC6TJZZr2QYJDMt+6Ck8ToyZfBgh2QDtpHcmIGmb5KCmPWw4PYh7qN0RJJDASoKJFb+E
+        gdCTbHQp0ESSUJNuuo4ospJAUbpLEF+mZWsON/TbYd92E1Ei7mWAriM20RJmuwfykl0CRamGWeh/i1/d
+        CksCusZWC937F+hMj0RrbBg6rh7BnevZO0uUl2jYio3H+FKgdgBaJrEVHi44C9ZUDb9eBdfn29DlRkEd
+        G5onCWLu9TDTJkNaI48rjQyXmxhS6Tm1nkdKA8PX1KPgKIyaJKBwP/A4ApbKGKhiQ4ySILqwky1YGW52
+        +fBuAnhrAF7rgVc0X9IUa/sHa7H7bDw4CLU81C8JTt/qcBnNTn9Ohw/ZbV5ktgtQtnslbtB7XcphON9k
+        ABTiC2RYJ+ZyQqBShCxKgpM5rcZVG7MbLZyPgNHMYSqIxeGB4UMl+rOOwVQYAXNRGKaVe6BOCsf3c3vv
+        SoJTOS25UcqW1hNZamtUVgvbJjPA8UwVy0/PEz4lHPKr5WH4Fn+Af5p0plYmk8n+Ae7lx5wTAUymAAAA
+        AElFTkSuQmCC
 </value>
   </data>
 </root>
