--- a/ILEditor/Editor.resx
+++ b/ILEditor/Editor.resx
@@ -130,110 +130,110 @@
   <data name="newButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMvSURBVDhPXZNJTBNhHMU/Dx48mRgP6sFETx40SjQQ4oFo
-        NCZK3ECRpRbcBXE9cNDEaERQW9uwKOISI6Ao1WhdKSXSomU1NlCwtNrSYZM2YImUdmY6ff47jDHxn7xM
-        Zvm9731vZtjf2f+US1QbfLZLZj+K3v9EoXEUx14OQ2Xggup671COwfdVbeC61c+4JnUDV69+PrjtyJ3u
-        uQrOmKreU6hp8eP/meYl+H+LGAhE0Dsagc0bwuOuceQ8ck+onnhUCs5YVq3rSrUtIEPcryjGghICUxIm
-        QxKmIhLCggQhKt9GWIyhxTWN7BqHX8EZy7jfV1bXGYAoAX3jEpwBCW6/BO+EBI7MhslsODjrcPrhIHgR
-        KPnghYIztqfKXmu0TyA4A3T6BHQPibCTekdFMhThHI+SYRTkjzP3e2AZmERalX1EwRnbWdHeZBkIwjch
-        Ujwe1u88Pnt4tA0K6OQEfCHZRwRIMSBL14VdFZ1Tu8q7Nis4Y9u1n1zOsRB66CEzGZjdPD66BVh+zOrT
-        Dx7tPlHeYkZFO9K1tgUKOjsppc18cCaKNi+PZlr943cCyaCVYKti0DEoykWmaS3YVNo0X0EZS9c+nbet
-        uFFu1yLDEVktbhKBcbWSujgRIT6KLZcfigyYo+CMbSoyLt19tRF8NEZgPDqBZGClbcQNrQRXmww4V5WL
-        Izd3YN/FzbEtRasuKDjFP2tYsffqeyooBqtHkOO3EByXheCKt3W41JCHN45K2EdN0DXlI0O3CokFizUE
-        1y1cf7K2QfOiDyP0vh+1hfH8axhv+6gLF6XwRJB7fSte9erxqr9M/g405sPQmY9idcH8MEs6/iAj+eDd
-        mcziNzhfN4BTD5zIv/sNB285oSrrR6bOgdTzCXjnuCfDf8fYU4mkgsVg6w5VXSuubVMu/xuqQy51KhxD
-        yunluGE6gBJTrnyvpDH3X4K16vJjhfoPqDH147XNi1bHGHq9k+D8IfyaFjFD/8BtYynSNCugNR2SV44f
-        4+dyB2szNQvXZOmvrMm6WZOQrX9H6kjI1rpWZusDS1IvCsl5ldhwvBobT2Ui+cQyOXZSwZJQYv6iUsYY
-        +wNDLcoVINowCQAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMvSURBVDhPXZNJTBNhHMU/Dx48kRgP4sFETx40SjAQ4sFo
+        NCZqVERFwFrcFcT1wEETowFBbW3DoohrBBSlGq0blBpp0YKAsYGCpdWWDpu0AUuktDPT6fPfYYyJ/+Rl
+        Msvvfe97M8P+zt4nXIra4LNdNPtR+O4nCowjOPpiCCoDF1TXewf3GHxf1QauS/2Ua1Y3cPXqZwObDt/q
+        mq3gjKnqPQWaFj/+nylegv+3iP5ABD0jEdi8ITzqHMOeh+5x1WOPSsEZy651FVXbAjLE/YpiNCghMClh
+        IiRhMiIhLEgQovJthMUYWlxTyKlx+BWcscy7vWV1HQGIEtA7JsEZkOD2S/COS+DIbIjMhoIzDqceDIAX
+        gZJGLxScsZ1V9lqjfRzBaaDDJ6BrUISd1DMikqEI51iUDKMgf5y+2w1L/wQyquzDCs7Ytor2Zkt/EL5x
+        keLxsH7n8cnDo21AQAcn4AvJPixAigHZuk6kV3RMppd3rldwxrZoP7qcoyF000NmMjC7eXxwC7D8mNHH
+        HzzafaK8xcyKduzQ2uYq6MysLn3PB6ejaPPyeE+rf/hOIBm0EmxVDD4PiHKRGVoL1pU2JygoYzu0T+Zs
+        Km6S27XIcERWi5tEYFytpE5ORIiPYsOl+yIDZik4Y+sKjQu3X24CH40RGI9OIBlYaRtxQyvB1SYDzlbl
+        4vD1rdh9YX1sQ+Gy8wpO8c8Yluy6/I4KisHqEeT4LQTHZSG44k0dLjbsw2tHJewjJuia85CpW4aU/EQN
+        wXXzVp2obdA878Uwve+HbWE8+xrGm17qwkUpPBHkXt2Ilz16vOwrk78DjfkQdOYjWJ6fEGapx+5lph24
+        PZ1V/Brn6vpx8p4Tebe/4cANJ1RlfcjSObD5XBLeOu7I8N8xdlciNT8RbOXBqivFtW3K5X9DdcilToZj
+        WH1qMa6Z9qPElCvfK2nK/ZcgWV1+tEDfiBpTH17ZvGh1jKLHOwHOH8KvKRHT9A/cNJYiQ7MEWtNBeeX4
+        MX4ud5CcpZm3IltftCL7ek1Sjv4t6XNSjta1NEcfSNx8QUjbV4k1x6qx9mQW0o4vkmOn5i8IpeTNL2WM
+        sT9BOMoTfb/WVAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="saveButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANWSURBVDhPXZJdTFNnGMffm13s3svFZHe7WjQumm3JvGFX
-        JkYmygC7zn0FjEXQGET8GFuLH22ViIkFtWpbEKUq4oYoGr5cS0s7OynSD9rSQylymtI2Bdqe08N/j6XL
-        jE/yz/vkOe//977v8xz2X3x3h9sqN4ctzc94NDx+A0VfFNW9EcjMXFLeHZrbZw6/lJs5h/wuNyjv4brl
-        92Z3/NLu+KBoZ0zWHVRohnm8H8s5CXxahDeWxWQ0C0toBV0Ti9hn8Mdlt4Oyop2xSpNP2WGJFUxcIo+F
-        pIRYSsLSioRUVkJGkCDkC5+REdcw7FtGldHNF+2MlV+futRpj0GUgKlFCZ6YBD8vIRSXwBEsQrBIcp1Q
-        d3MWORE4MxBC0c7YHp3L1OeKI7kK2MMCHHMiXKTJqEhAEZ7FPAHzID7qr7/CiHcJu3Wu+aKdsV2XxwdH
-        vEmE4yJdL4fRmRz+CuZgnRVg5wQ4Sa55AdIaUHlxAqWX7anStomvi3bGdmpf+DwLK3hFm54RoPaKG016
-        N+p1Lvxmeo3qC07UtDpxtMOFI+3/4Af1OD6uuL+1aGds+9nnueRqHtZQDs/p9J+1DvQ604U3P7LOFdZ3
-        49YQj+/P2dZ7UKa98+EO1ZNCd0fIPDSTRVWLFfrhRGFzbZujsL6NDDUvlQU0DyLYf966Dihp6Nv4TcsT
-        5PJrZCaAPwvZ2XE6JUGjkyBSXaLH50kCjUmkmqo7gN2nR9YB2w+bP9nb8pgatIbRoEAQgZ5gR/sAj1Od
-        AfzaFcAJox/Hb3rRSDp2w4Njeg9kyiGQuXPDl7WmHs39KczTvA3WDO69zGC/2oZLf0bRfJsjhXHSGETT
-        rRk03vCjQe/FkQ43yk8Ngm2r0Zd//uPV1QrVH2jq9OIQkQ9cnUZZ8wtc6efpN04jmoqTEogmE5inPL6S
-        RuO1KZTU9YJ99pPunMpkLbbo/yg9PYaO/gTepHkoh0qhsx1Cu62e8jIsLkfQdC2AL2rugm2Rt1UrWgdg
-        fPoajywhjLkXMBlawp7fLXj699spBGBdOoPpZQOmVw2Ua6g2C5UhgK8O9BCgQrNhU2WrclPlBePmqtZ+
-        km1zldb30c6HwrfKMVSrJ1F3MYyD2hko1D7Unp/GQbUTJYoefCrvwr95S+uXngQWHQAAAABJRU5ErkJg
-        gg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANXSURBVDhPXZJdTFNnGMffm114790SE++8WjQzmrlk3rAr
+        4zImioBd574CxiJoDCKbytbiR1slYmJBrdoWRKkOcUMUDSCupaWdnRTpB23poRQ5TWmbAm3P6eG/x9Jl
+        Zk/yz/vkOe//977v8xz2b3x9l9smN4ctzc94NDx+C0VfFNW9EcjMXFLeHZo9YA6/kps5h/weNyjv4brl
+        92d2/dju+KBoZ0zWHVRohnn8P5ZyEvi0CG8si4loFpbQMrrGF3DA4I/L7gRlRTtjlSafssMSK5i4RB7z
+        SQmxlITFZQmprISMIEHIFz4jI65i2LeEKqObL9oZK78xebnTHoMoAZMLEjwxCX5eQigugSNYhGCR5Bqh
+        7tYMciJwdiCEop2xvTqXqc8VR3IFsIcFOGZFuEgTUZGAIjwLeQLmQXzU33iNEe8i9uhcc0U7Y19eGRsc
+        8SYRjot0vRxeTOfwZzAH64wAOyfASXLNCZBWgcpL4yi9Yk+Vto1/XrQz9oX2pc8zv4zXtOkZAWqvutGk
+        d6Ne58IvpjeovuhETasTxztcONb+N75Vj2FjxYNtRTtjO889zyVX8rCGcnhOp/+gdaDXmS68+ZF1trC+
+        H7eHeHxz3rbWgzLt3XW7VE8K3R0h89B0FlUtVuiHE4XNtW2OwvouMtS8VBbQ/BbBwQvWNUBJQ9+Gr1qe
+        IJdfJTMB/FnIzo3RKQkanQSR6hI9Pk8SaEwi1VTdAew5PbIG2HnUvGlfy2Nq0CpeBAWCCPQEO9oHeJzq
+        DOBMVwA/Gf04ecuLRtKJmx6c0HsgUw6BzJ3rP6019WgeTGKO5m2wZnD/VQYH1TZc/iOK5jscKYyfjUE0
+        3Z5G400/GvReHOtwo/zUINj2Gn35J99dW6lQ/Y6mTi+OEPnQtSmUNb/E1X6efuM0oqk4KYFoMoE5yuPL
+        aTRen0RJXS/Y1u9151Uma7FF/0Xp6VF09CfwNs1DOVQKne0I2m31lJdhYSmCpusB7Ki5B/axvK1a0ToA
+        49M3eGQJYdQ9j4nQIvb+asHTv95NIQDr4llMLRkwtWKgXEO1GagMAXx2qIcAFZr1mytblZsrLxq3VLX2
+        k2xbqrS+D3c/FPYrR1GtnkDdpTAOa6ehUPtQe2EKh9VOlCh68JG8C/8AePzrlSDqqxQAAAAASUVORK5C
+        YII=
 </value>
   </data>
   <data name="liblButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALJSURBVDhPrZHLTxNRFMbrzrD2b3DtnrAyISERgUpqLcV2
-        6COFtpTWKVQoDCQolvAq0PLSAgVRKFiBqoUS5CFQIhCISAwhhpcpjy4arRo38zn3UqMRl57kJDcz3/c7
-        37lX9N9rheOS5srZ5JDFmHOgYrB/M4v2QZ4CIdZwe+4um0w0Cfn5Wis2h6OmQpzqtDgWTDGbDTGWpedT
-        fT6iZhOWBU1Cfr7eyLL5z3Y7vre04VinxoFUTJucyTfyb06Szocs+svUwHVwSWwzm1zUYMwpeVqIXfE1
-        xL1eRA0FOBFWIKZfsBOtBhFGLqyUgQnWdIUCSj3W8L2AHRX+Yth8JuxlX8eP0QC+ul04LdDSyFFLIT7J
-        ZdRMVtmXZv0G6B1qvnHyPryLHbCPsJROAHF3G+ItLYjV1+FIKafmIyb3DPBnAk13Lqa3JtA4WQPbsBk7
-        t27QyXF3O744nYjVOhBR5FAjARwK02ez03hreetVjhtLEul6lFj+uICJzQCGlvvR6avCvJHBrjSTvgRJ
-        Qe7iMEeKHXEaplVKcI4BmDtnoa/uD4vye/OwsD2D8fURjK75MBD2oHjIiIoyF8KMTHiBTOxKMhBWSFFt
-        a4K2KYTG8Q2UeReRYWvmRfoHKt6/OojhlQEMLnvRvdABdlCPDPszPA/voKr7NTT1QWoiTQA65xSUta8g
-        rhiFqKjBkGJwqyOGPi06ZlrQv+Shd5FV4cfU+gF889vwBN+hvG8JpvZZyB0vqTmvYRLZlQKAFIALhU0G
-        lcbFxAu8KuT3MpQeXN3D45kPeCL0o8lNKOuC1MwIiQiAJvi7LHXaSwpOcVHCufnu0Ht4Qlt4KCRoFeLn
-        Os4mE4CkagzpViefsJ0vdbk7RVbaE5EKQofvLVyBDagaQpDVvEB6iQ9ia9dpHutMTcj/XWQ1nb1dnWVz
-        xyWVY0JkP1KtXd8UJa13zhQi0U9yZA3sImin1QAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALJSURBVDhPrZHfT1JhGMfprnnd39B1986rNje3TCVHBBgc
+        QIYConRQUvToZhnOH5CCvwoVzVI080eF4Ax1Kix1usw155q/GipesKJaN+fbeV9tteyyZ3u2d+d8v5/n
+        +7yv6L/XMselzFWyqSGLSb6vYbB3M4f2vlqJEGu8PXeXTSWaM/n5Wi0tiZyYixDX63AkmBI2GxIsS89x
+        QwFOSsyICpoz+fmal+Xyn+12fG9pw5Fei32pmDY5k2/k36wkkw9ZDJepgevgUtiHbGpxk0le9qwIO+Jr
+        SPp8ODEW4lhYgZh+wY51+YgxCmGlLEyx5isUUO61Ru5N2lE1Wgqb34zd3Ov4MTaJrx434oU6GvnEUoRP
+        Chk1k1X2pDm/AYYHWr45eB++xQ7YR1hKJ4Ckpw3JlhYkGhtwqFJQ8yGTdwr4M0F+dx5mNqfQHKyDbbgE
+        27du0MlJTzu+uFxI1DsQU8qpkQAOhOnh3AzeWtl6lePGU0T6HhWiHxcwtTGJoWg/Ov01mDcx2JFm05cg
+        KchdHMil2BZnYEajAucYQEnnLAy1/RFRQa8aC1thTKyNYGzVj4GIF6VDJlRVuBFhZMILZGNHkoWIUopa
+        mxM6ZwjNE+uo8C0iy+biRYY6DT+6Mojh5QEMRn3oXugAO2hAlv05XkS2UdP9BvmNAWoiTQB61zRU9a8h
+        rhqDqLjJmGb0aGPGPh06wi3oX/LSu8ipGsX02j7881vwBt6hsm8J5vZZKByvqFndFERutQAgBeBCkdOo
+        yXczyUKfBgW9DKUHVnbxJPwBT4V+HNyAqiFAzYyQiABogr/L0qC7pOSUFyWcm+8OvYc3tIlHQoJWIX6e
+        43QyAUhqxpFpdfJntvOlrfSkycp7YlJB6PC/hXtyHZqmEGR1L5FZ5ofY2hVXs670M/m/i6ymt7drc2ye
+        pKR6XIg8inRr1zdlWeudU4VI9BNjPA3kkaGI5AAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="compileButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJJSURBVDhPpdJbSNNRHAfwE730VD4VSRRGdnlLQsIu9GCM
-        eoo9hGGiqbVWE7ecBW6jnGNoijZlbHab7qatkiIx0+5WZq6MoqCL9CRMtFJ3++/+7ZzznxE9mX3h+3I4
-        v8///M//T/47UpVH0dwzHtR2j0PTRev6ghrHJ5zp/IjTtg9QX32Pqktvobo4BqXFiwrzK2gsz4NsjgPG
-        m8PJtoFJ/GsPmR4nOcCevJjKmp6AAxrXVywm5fUPRaDG+ZkvROMJRGiFaBxBIQ6/EMNsKIofAQFTM2H4
-        pkOYmArgm8/P9x8xDqYBemEssWQSsUSCQ+FYHKGICM2F4/gZjGDaT6FZAZPfw3x/sb5fBNhtsyQoEGcI
-        bZRCAoVC7DQUClBI1bUHxzpy4JuZ4/uLzvaJAPtULIlUigPzUJQ2wiCKMOiEIw/63kIUtG+mpxRQqLsj
-        Auor734D82WA0r0bla48yB25KLPlQHfrIK57W1F94wAkptUo0HpEQGl9LQK0yT8ghXM7bo9Z0PPGzAev
-        eU0wPaiG/WUj5G4JcuuXYVsDWUEqzaMcYEnRMiRJgXL6vmy4ZVCJ8/cUMN6Voba3FHV9x9E+ZEBR5y5k
-        nyMJUtE2wof/zuHLW+AZNcE90gz7cCNsLxoochLWoTrI3PuQrVuOTA3ZSqSnuj3ylmf8zzra8Ailxvso
-        MQxAal2P/a1rkH9hJXY2ZaC4YwcsT2tR5pRggy4De9X6fn4HC81Gw5JQiT0f67RkIlNHNqWXF56sKhJa
-        q12KVVqSlV6iIeQXYUx95e+p3GgAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJKSURBVDhPpdJbSNNRHAfwE730VD4VSRRGdnlLQsIu9GCM
+        eoo9xMBEU2utJm45C9xGOcdwKdqUsdlN3U1bJUViptnNssyVURR0kZ6EiVbqbv9d/XbO+c+Insy+8H05
+        nN/nf/7n/yf/Hanaq2zsHg/pusah7aR1f0G18xPOdnzEmbYP0Fx7j8rLb6G+NAaVzYdy6ytobc9DbI4D
+        plvDqZb+SfxrZZbHKQ6wJy+l8oYn4IDW/RVLSVndQxGodn3mC7FEElFaIZZASEggIMQxG47hR1DA1EwE
+        /ukwJqaC+OYP8P1HTQNpgF4YSzyVQjyZ5FAknkA4KkJzkQR+hqKYDlBoVsDk9wjfX2ToEwF22yxJCiQY
+        QhujkEChMDsNhYIUUnfuw/H2HPhn5vj+wnO9IsA+FUtyfp4DC1CMNsogijDopDMPhp4CyFq30lMKKNDf
+        FQHN1Xe/gYUyQOXZiwp3HhTOXJS25UB/+zBu+JpRdfMQJJa1kOm8IqCyvxYB2tQfkNK1E3fGbOh+Y+WD
+        130WWAar4HhZD4VHgty6FdhhJqtIhXWUAyzztAxJUaCMvi8bbhpQ4cJ9JUz35KjpKUFt7wm0DhlR2LEH
+        2edJkpS3jPDhv3PkyjZ4Ry3wjDTC8aIebcNmipyCfagWcs8BZOtXIlNLthPp6S6voukZ/7OOmR+hxPQA
+        xcZ+SO0bcbB5HfIvrsbuhgwUte+C7WkNSl0SbNJnYL/G0MfvYLHZbFwWLnbkY4OOTGTqyZb08uKTVUnC
+        63XLsUZHstJLNIT8AlpsfeMMdNkvAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="zoomInButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKLSURBVDhPrZHvSxNxHMf3F/S0h0UPYlaIJHpPNAnUZKKX
-        On/M/RCTYamlkkjCRGnuKkfOyh9MyRnmzZh1FViWzuV0HuXue2aYEOK8jVixB9VNenZ8um+ejHBQD3rB
-        99F9Xu/v+/s51X9jlTYQnNvEIHdNzDdVIvloUgq4jDF2pJJhB8oIZSw5PG008w9ro9yECa2OV1uCLp06
-        4CxVsyNaC+ssR8vDlVG/47xZGf8TfPOerKe4kJiCdkQtEuLNfDjetCb8KFoXvh/z95PUkoOMLtg1B5tw
-        tInBNwdDohoJ4iX5dPBhsR2Fd9t4Id4qB+n50Leji30k8t7QMIqWANE1sdXxKstaRCyV5Wt7cvyqIjeh
-        sNggN8r12jSWWVtRTNES+NykFHTq1PJw4/6t+0+of2GA2qeVYJgqhdmufPVCb46kaAl8k8USXhgviPVY
-        RDvxKziME8SLNY8rgN64D2Vjhb8DvFSSgIBLH2OHtBYuvFuw10JsqHuuA5NHC+0vL8PY+0FonK6DXHs2
-        nLESoGgJVoa1zMpAOcKLkutX8BHRjCu71odhhL8LVKAT+t/dBPuKFTI60g4G+B3FxPIgGX3TR1Lc9s8j
-        fCR+FlcuGsoDs9sEdtYG1aNlkN6eCqnNKfCkOUunqAl8vcVmv/yfvbcK0Zz1nAW/Fx9c+bq/E063nYJI
-        0Anby7dh3krCszrisKImWKA0xOseDTNry4/hZc335Ei4clrrSTjReBy+bEzA181J+DTXDZ6SbIlOFpIM
-        piXHuNhXBaGAA6IfxmGHvQdvR2uBylNvKSN/Z7ohyzjfUwKbM53wcaYLlu5UgKee2FY+/xuPzBnVDwzp
-        n191F4DnQubWhD7zkEqlUv0Cn56PN+vYN9EAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKLSURBVDhPrZHfS1NhGMf3F3TbZdFFzAqRRM+NJoGaTLaZ
+        zh9zP8RkWGqpJJIwUZo7lSNn5Q+m5AzzzJh1KrAsncvpPJQ77zHDhBDn2YgVu6jOpLvD03nzyAgHddEH
+        3qvzfL7v932O4r+xShkJ1mOmkacm7p8qEf2URgy6TXFmpJJmBsoIeSw1HGWycA9rY+yEGa2OV1tDbr0y
+        6CpVMiM6K+MqR8vDlbGAs8Qij/8JvnlPNpBsWEhDO4IO8YlmLpJoWuN/qNf578cC/VpyyamNLThUB5uw
+        lJnGN4fCghLxwiXpdHARoR1Fdts4PtEqBRm48Leji31a5LuhomUtCaJq4qvjVda1qFAqydf25MRVWW5C
+        EaFBapTvs6uss3Z1XNaS+D0aMeTSK6Xhxv1b959Q/8IItU8rwThVCrNdhcqF3jxR1pL4J9UiXhjHC/VY
+        RDuJKziM5YWLNY8rgNq4D2Vjxb8DfGSKgKDbEGeGdFY2slu010JoqHuuB7NXB+0vL8PY+0FonK6DfEcu
+        nLERIGtJVoZ19MpAOcKLkupXcFHBgiu714dhhLsLZLAT+t/dBMeKDbI6Mg4GBJwaYnlQG3vTpyXZ7Z9H
+        uGjiLK6sHioAi8cMDsYO1aNlkNmeDunNafCkOUcvq0n8vRpLQPrPvlvFaM52zorfiw+ufD3QCafbTkE0
+        5ILt5dswb9PCszrisKwmWSBVxOseFT1rL4zjZc335Im4ckbrSTjReBy+bEzA181J+DTXDd6SXJFKFZIK
+        uiXPtNhXBeGgE2IfxmGHuQdvR2uBLFBuySN/Z7ohxzTfcx42Zzrh40wXLN2pAG89sS1//jceWbKqHxgz
+        P7/qLgLvheytCUP2IYVCofgFkpePMo01EsEAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="zoomOutButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ9SURBVDhPrZH/SxNxGMf3LwRBEEFREOuXIKQGYYwodaz0
-        0uaXpdPMhrU0iyQUrjTcJlltRZZMf3Cgm4bhUWRaczudmyvcfU6KFCqct0Gr1he9GxrR9XSfPBnhoH7o
-        BZ9f7vO8nuf9eU7x35hyl6mYvnIK9VUk6P58kXYTYrDbkAh1FlOh9qMquSw9rNtgZHsr40xPOZpyHiPD
-        3Xpl0FGgDHXqyJCjEAU6iuN++xGjXP4nePKKXGplIvwONM/rECfUsVGhZppbzH3BLWz13ySsE3Yi7rum
-        XZuEcZdTeHI4wisRx5+WTiMb5S+iaLKe5YTzUqNSNvJ1y7iNQN5WLSVrKZC7IjHlLCGnY3yBJDesyMIF
-        Wa5BUd4kJTrotWjJEUtuQtZS0H2EGHbolVLxmdWpq0/AiViOr8YpRpqylb42tShrKWhXnogXhguxiOaF
-        s7gZw/Gnfn+L8ienOaEYN/Ba0zQIdpcmQnd1JBNNalZS8KafDfXwo64WvledgGVdESSzNLC4ey982b4T
-        ZC3FZIeOmmwvRHhRUvwiNsYbsfztGQ3LY8Ow9HgQkgO9IDi74NPGbWsb+O15qsAdIj5mI6zM3NJmNibs
-        TzcZyx/XbYLBuky9rKag2/KMfuk/e68eQp6WHBK/F5/hxgMkfV0tzjxqhFjYAXOBGzDaQsCDKtUGWU3h
-        s2pVT81aasSSncDLGjWrxYeXcxY8Vw7DG7oV3r/qgQ+zLnjtaYaB/H2iO12TdFDn1IZxWwlEgnaIv3TC
-        fOg2PO+qBGuW8q1c8nfumzINo+Z8mB26BDNDTTBxqwgGqnd9lq//jXvGPQZXWQY8adZA/3HVO5c+Y71C
-        oVD8AsxMm9c8iSlpAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ+SURBVDhPrZH9S1NhFMf3LwRBEEFREOuXIKQGYYwoX1i5
+        LZsvS6eZDcs0iyQc3NJwTrJyRZZMf9hAtxmGlyLT2svV6Vzh7nOlSKHC7W7QqvWi9w6N6Ha6T14Z4aB+
+        6APPL/c5n3O+z7my/8a0q1xBuytI5K5MUgNagXKphaDdkAz1lJChrqMKqSwzjMtgZPqrEnRfBZp2HCPC
+        dr08aCuUh3p0RMhWhCa7SxIBq9Yolf8Jnrwil1noCLcDRTkdYvkGJsbXzbCLBS/Yha2BmxrLhFWT8F9T
+        rU1CuypIPDkc4eSI5U6Lx8TEuIsolmpkWP682KiMiXzdMt6pQb52FSlpaZCrMjntKCVm4lyhKDetyPwF
+        Sa5DMa5WTHTQ16YiRtsKkpKWhnKrhbBNLxeLz6xOXX0CTsSwXA1OMdqcK/d3KAVJS0M5CwS8MFyIRRTl
+        z+JmNMud+v0txp2cYfkS3MBnydAgaC9Lhu7qCDqWyl9JwdX+bGqEHw318L36BCzriiGVkw+Lu/fCl+07
+        QdLSTHXryKmuIoQXJcYvZuKcEcvfnlGwPDYCS4+HIDXYD7yjFz5t3La2QcCqVkze0STGOjUWen5pMxPn
+        92eajOWP6zbBUEO2XlLTUB1qY0D8z76rh5CnNY/A78VnxHSAoK4rhdlHJoiHbTA/eQO8rRp4UK3YIKlp
+        /BaV4qlZRY625SbxsrxmpfDwct6C58pheEO1w/tXffBhzgmvPS0wqN0nuDI1yQR5TmkY7yyFSNAKiZcO
+        iIZuw/PeKrDkyN9KJX/nfm22wWs+AnPDl2B2uBkmbhXDYM2uz9L1v3HPuMfgLM+CJy35MHBc8c6pz1ov
+        k8lkvwC/RZvSQLCCDwAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="tool_bar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -242,18 +242,18 @@
   <data name="greenOpen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJqSURBVDhPhZLRS1pRHMcP7A/Y0/6WHva2pz3uac+CQknE
-        AoUKoR5qSYliFigh1mQ2pmC2rC0vTU3d9Ho163qvlTdvWY3h2mIwxkYP351zpptbq/0OXw5cvr/z+d3f
-        70f+F6VSaaFQKFxms1mkUikIgoD19XXEYjFEIpFnbdvVkCTpNlVE0zScnLyD1jiGpumoM9UbOD//hFAo
-        hLb9z6DU+8Vi8VTXdbRaLRTEbeTeFJHJikhn8kin32JvX0MgEABRVfW7LMuoVCqgROTzeWQyGSSTSSQS
-        CaytrfFyw+EwJ87OzmFmxgO1VofP5wNhyRcXn6HrTa6GfoxDVu7h0a9y96k+nH/kxNfJHITNDBT1gD40
-        A1Iul3kirfxG1fY0TnQ6nZienkZV2YfD4QARRZFTuZGdzt196DdVrXPihpDGq40UZLmGiYkJkFwuxzvc
-        IV2nDvFpfhEPnz/ADn1gdHQUhM2WjYcb/z6db/SWqz+J957cRc9cDyo7KoaHh0FYp1mjus1XbqoOcTUu
-        YGVVwHalCovFAhKPx3FIO94xXqeqcsCJKy8SWF7ZQHm7ioGBAZBoNIpm8xSKUsOurKBU3uELs0UXJl8o
-        QRQlukgSbeIeJVoRpcnR5ZfUJ6Ovrw9kaWnJGQwGJb/fL3m9XsnlcjXYvOfn5zE2NvaN/fek3Y7Hk3Ys
-        LAZ5ItPZ2XuYTCZW3e9wu92PpqamNtNbWV6izWb7OjQ05B8ZGdm1Wq0YHBxEf38/ent7YTQaYTAYau1U
-        QuiM73g8HjpfBfpRk2+hTvfDbDZ/aVtuDrrrt8bHxyXWaUpEF1FsW/4RhPwAPN08XfR97tIAAAAASUVO
-        RK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJoSURBVDhPhZLRS1pRHMcP7A/Y0/6WHva2pz3uac+BgkHI
+        goQSoR5yiYmiFhQh1WQ2lmC2tC0vTU3d9Ho163qvljdvWY3R3GIwxsYevp1zpptbq/0OXw5cvr/z+d3f
+        70f+F6VSabFQKPzIZrNIpVIQBAEbGxuIRqMIh8PPOrarIUnSbaqwpmk4OXkHrXkMTdPRYGo00W5/QigU
+        Qsf+Z1Dq/WKxeKrrOs7Pz1EQd5B7U0QmKyKdySOdfov6voaFhQUQVVW/y7KMSqUCSkQ+n0cmk0EymUQi
+        kUA8HuflrqyscOL09Ax8Pj/UWgNzc3MgLPni4jN0vcXV1I9xyMo9PPpV7j7Vh/ZHTnydzEHYykBRD+hD
+        PpByucwTaeU3qlbXONHtdmNqagpVZR8ulwtEFEVO5UZ2unfvod9UtcGJm0IarzZTkOUa7HY7SC6X4x3u
+        kq5Tl/g0v4SHzx9glz4wNjYGwmbLxsONf5/uN3rL1Z/Ee0/uom+mD5VdFaOjoyCs06xRveYrN1WXuB4T
+        sLYuYKdSxfDwMEgsFsMh7XjXeJ2qygEnrr1IYHVtE+WdKsxmM0gkEkGrdQpFqWFPVlAq7/KF2aYLky+U
+        IIoSXSSJNrFOiRZEaHJk9SX1yRgYGABZXl52B4NBKRAISLOzs5LH42myec/Pz2N8fPwb++9JhwOPJx1Y
+        XAryRKazs/cwGo2sut/h9XofOZ3OrfR2lpdos9m+joyMBKxW657FYsHQ0BAGBwdhMplgMBjQ399f66QS
+        Qmd8x+/30/kq0I9afAt1uh+0zC8dy81Bd/3WxMSExDpNieghih3LP4KQSzu9PFpFVdBwAAAAAElFTkSu
+        QmCC
 </value>
   </data>
   <metadata name="tabImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -264,7 +264,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADW
-        CwAAAk1TRnQBSQFMAgEBBAEAASABAAEgAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CwAAAk1TRnQBSQFMAgEBBAEAASgBAAEoAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
